# aws_lambda_worker

./: .gitignore  .gitmodules  pyproject.toml
.github/workflows/: build.yml  release.yml  test.yml
action/install-aws-lambda-runtime/: action.yml
action/install-aws-sdk/: action.yml
lambda/: CMakeLists.txt
lambda/include/: exception.hpp  handler.hpp  json_decoder.hpp  lambda_config.hpp  response_helper.hpp  task_type.hpp
lambda/src/: handler.cpp  json_decoder.cpp  lambda_config.cpp  main.cpp  response_helper.cpp
test/: .gitignore  Makefile  pyproject.toml
test/image/: Dockerfile  entrypoint.sh
test/src/: conftest.py  test_copy.py  test_or.py  test_reduce_mixed_circuit.py  worker.py
test/src/api_call/: test_api_call_and.py  test_api_call_reduce_and.py
test/src/direct/: test_and.py  test_circuit_errors.py  test_constant.py  test_different_size.py  test_invalid_data_ptrs.py  test_negate.py  test_reduce_and.py  test_reduce_or.py
